--- a/.github/workflows/ios_app.yml
+++ b/.github/workflows/ios_app.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Run Unit Tests with Coverage
         run: |
           xcodebuild test \
-            -project yattt_ios_app.xcodeproj \
-            -scheme yattt_ios_app \
+            -project IOS-APP_ASE2.xcodeproj \
+            -scheme IOS-APP_ASE2 \
             -sdk iphonesimulator \
             -destination "platform=iOS Simulator,name=iPhone 15,OS=latest" \
             -enableCodeCoverage YES
@@ -54,8 +54,8 @@ jobs:
       - name: Build App
         run: |
           xcodebuild clean archive \
-            -project yattt_ios_app.xcodeproj \
-            -scheme yattt_ios_app \
+            -project IOS-APP_ASE2.xcodeproj \
+            -scheme IOS-APP_ASE2 \
             -sdk iphoneos \
             -configuration Release \
-            -archivePath $PWD/build/yattt_ios_app.xcarchive
+            -archivePath $PWD/build/IOS-APP_ASE2.xcarchive
